# samples

./: README.md
C_samples/Final_Project/: CMakeLists.txt  Makefile  board.c  board.h  command.c  command.h  help.c  help.h  inputvalidation.c  inputvalidation.h  load.c  load.h  main.c  resize.c  resize.h  save.c  save.h  write.c  write.h
C_samples/Homework_2.2/homework2.2grade_need/: CMakeLists.txt  grade_need.c
C_samples/Homework_3.2/: CMakeLists.txt  investments.c
C_samples/homework3.1/: CMakeLists.txt  main.c
C_samples/homework3.3/: CMakeLists.txt  main.c
C_samples/homework4.1matrix/: CMakeLists.txt  main.c
C_samples/homework4.2/: CMakeLists.txt  pascal.c
C_samples/homework4.3/: CMakeLists.txt  main copy.c  main.c
C_samples/homework5.1/: CMakeLists.txt  main.c
C_samples/homework5.2/: CMakeLists.txt  board.c  board.h  main.c  move.c  move.h  win.c  win.h
C_samples/homework6.1/: 3-test.txt  CMakeLists.txt  main.c  wcount.c
C_samples/homework6.2/: CMakeLists.txt  cat.txt  read_lines.c  read_lines.h
C_samples/homework7.1/: CMakeLists.txt  main.c
C_samples/homework7.2/: CMakeLists.txt  bin_str.c  main.c
C_samples/homework_2.3/: CMakeLists.txt  conversions.c
R_samples/: assign_4.R  assignment_1.R  assignment_2.R  assignment_3.R  assignment_5.R  assignment_6_MM.docx  assn_6.R
python_samples/: lifedata.txt  prog2.py  prog4.py  prog67.py  save.txt
python_samples/create_snapshot/: create_snapshot.py
